# oeis-tools

./: .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  publish.yml  quality.yml  tests.yml
docs/: api.md  index.md  usage.md
docs/reference/: bfile.md  sequence.md  utils.md
reference/bfile/: index.html
reference/sequence/: index.html
reference/utils/: index.html
search/: search_index.json
src/oeis_tools/: __init__.py  __version__.py  bfile.py  core.py  sequence.py  utils.py
tests/: conftest.py  test_bfile.py  test_sequence.py  test_utils.py
usage/: index.html
