[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oeis-tools"
dynamic = ["version"]
description = "Tools and utilities for working with OEIS integer sequences"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Enrique Pérez Herrero", email = "energycode.org@gmail.com" }
]

keywords = [
  "oeis",
  "integer-sequences",
  "number-theory",
  "math"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]

dependencies = [
  "requests>=2.31"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4"
]
plot = [
  "matplotlib>=3.8"
]

[project.urls]
Homepage = "https://github.com/oeistools/oeis-tools"
Repository = "https://github.com/oeistools/oeis-tools"
Issues = "https://github.com/oeistools/oeis-tools/issues"
Documentation = "https://github.com/oeistools/oeis-tools#readme"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "oeis_tools.__version__.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
