[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oeis-tools"
dynamic = ["version"]
description = "A Python toolkit for programmatic access, analysis, and visualization of integer sequences from the OEIS (Online Encyclopedia of Integer Sequences)."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

authors = [
  { name = "Enrique Pérez Herrero", email = "energycode.org@gmail.com" }
]

keywords = [
  "oeis",
  "integer-sequences",
  "number-theory",
  "math"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

dependencies = [
  "requests>=2.31"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.6",
  "build>=1.2",
  "twine>=5.1",
  "pre-commit>=3.7"
]

plot = [
  "matplotlib>=3.8"
]

[project.urls]
Homepage = "https://github.com/oeistools/oeis-tools"
Repository = "https://github.com/oeistools/oeis-tools"
Issues = "https://github.com/oeistools/oeis-tools/issues"
Documentation = "https://github.com/oeistools/oeis-tools#readme"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "oeis_tools.__version__.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

# ----------------------------
# Tooling configuration
# ----------------------------

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
  "tests",
]
